# cmake_generic

./: CMakeLists.txt  Makefile  main.cpp  readme.md
include/: example_file.h
scripts/: build_project.sh  clean_project.sh  run_project.sh
src/: CMakeLists.txt  example_file.cpp
